// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertTokensObjectToResolved converts object-like unresolved tokens to resolved object 1`] = `
{
  "colors": {
    "blue": {
      "type": "color",
      "value": "#0000ff",
    },
    "primary": {
      "type": "color",
      "value": "#ff0000",
    },
    "red": {
      "type": "color",
      "value": "#ff0000",
    },
  },
  "sizing": {
    "base": {
      "type": "sizing",
      "value": 2,
    },
    "medium": {
      "type": "sizing",
      "value": 3,
    },
    "scale": {
      "type": "sizing",
      "value": 1.5,
    },
    "small": {
      "type": "sizing",
      "value": 2,
    },
  },
}
`;

exports[`convertTokensObjectToResolved does not expand composition when not needed 1`] = `
{
  "composition": {
    "body": {
      "rawValue": {
        "sizing": "{size.12}",
        "spacing": "{space.24}",
      },
      "type": "composition",
      "value": {
        "sizing": 12,
        "spacing": 24,
      },
    },
    "heading": {
      "rawValue": {
        "opacity": "{opacity.50}",
      },
      "type": "composition",
      "value": {
        "opacity": "50%",
      },
    },
  },
  "opacity": {
    "50": {
      "rawValue": "50%",
      "type": "opacity",
      "value": "50%",
    },
  },
  "size": {
    "12": {
      "rawValue": "12",
      "type": "sizing",
      "value": 12,
    },
  },
  "space": {
    "24": {
      "rawValue": "24",
      "type": "spacing",
      "value": 24,
    },
  },
}
`;

exports[`convertTokensObjectToResolved does not expand shadows when not needed 1`] = `
{
  "shadow": {
    "1": {
      "rawValue": {
        "blur": "4",
        "color": "#000000",
        "spread": "5",
        "type": "dropShadow",
        "x": "2",
        "y": "3",
      },
      "type": "boxShadow",
      "value": {
        "blur": 4,
        "color": "#000000",
        "spread": 5,
        "type": "dropShadow",
        "x": 2,
        "y": 3,
      },
    },
    "2": {
      "rawValue": [
        {
          "blur": "4",
          "color": "#000000",
          "spread": "5",
          "type": "dropShadow",
          "x": "2",
          "y": "3",
        },
        {
          "blur": "5",
          "color": "#000000",
          "spread": "6",
          "type": "dropShadow",
          "x": "3",
          "y": "4",
        },
      ],
      "type": "boxShadow",
      "value": [
        {
          "blur": 4,
          "color": "#000000",
          "spread": 5,
          "type": "dropShadow",
          "x": 2,
          "y": 3,
        },
        {
          "blur": 5,
          "color": "#000000",
          "spread": 6,
          "type": "dropShadow",
          "x": 3,
          "y": 4,
        },
      ],
    },
  },
}
`;

exports[`convertTokensObjectToResolved does not expand typography when not needed 1`] = `
{
  "typography": {
    "h1": {
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": 96,
        "fontWeight": "Light",
      },
    },
    "h2": {
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": 60,
        "fontWeight": "Light",
      },
    },
    "h3": {
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": 48,
        "fontWeight": "Light",
      },
    },
  },
}
`;

exports[`convertTokensObjectToResolved preserves all references when requested 1`] = `
{
  "colors": {
    "blue": {
      "type": "color",
      "value": "#0000ff",
    },
    "opaqueRed": {
      "description": "Should NOT be resolved",
      "type": "color",
      "value": "rgba(255, 0, 0, {opacity.medium})",
    },
    "primary": {
      "description": "Should NOT be resolved",
      "type": "color",
      "value": "$colors.red",
    },
    "red": {
      "type": "color",
      "value": "#ff0000",
    },
  },
  "opacity": {
    "medium": {
      "type": "opacity",
      "value": 0.5,
    },
  },
  "radii": {
    "full": {
      "type": "borderRadius",
      "value": "100%",
    },
    "leaf": {
      "description": "Should NOT be resolved",
      "type": "borderRadius",
      "value": "{radii.full} 0%",
    },
  },
  "sizing": {
    "base": {
      "type": "sizing",
      "value": 2,
    },
    "large": {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "$sizing.medium * $sizing.scale",
    },
    "medium": {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "{sizing.small} * {sizing.scale}",
    },
    "responsive25": {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "calc(25vw * $sizing.small)",
    },
    "responsive50": {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "calc(50vw - {sizing.large}px)",
    },
    "scale": {
      "type": "sizing",
      "value": 1.5,
    },
    "small": {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "{sizing.base}",
    },
    "xsmall": {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "1 * {sizing.base}",
    },
  },
  "text": {
    "fontWeight": {
      "base": {
        "type": "fontWeight",
        "value": 100,
      },
      "light": {
        "type": "fontWeight",
        "value": "Light",
      },
    },
    "size": {
      "base": {
        "type": "fontSize",
        "value": 16,
      },
      "default": {
        "description": "Should NOT be resolved",
        "type": "fontSize",
        "value": "{text.size.base}{text.size.unit}",
      },
      "h1": {
        "type": "fontSize",
        "value": 96,
      },
      "unit": {
        "type": "fontSize",
        "value": "px",
      },
    },
  },
  "typography": {
    "h1": {
      "description": "Should NOT be resolved",
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": "{text.size.h1}",
        "fontWeight": "{text.fontWeight.light}",
      },
    },
    "h2": {
      "description": "Should NOT be resolved",
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": "3.75 * {text.size.base}",
        "fontWeight": "7 * {text.fontWeight.base}",
      },
    },
    "h3": {
      "description": "Should NOT be resolved",
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": "3 * {text.size.base}",
        "fontWeight": "5 * 100",
      },
    },
  },
}
`;

exports[`convertTokensObjectToResolved preserves rawValue when requested 1`] = `
{
  "colors": {
    "background": {
      "rawValue": "$colors.black",
      "type": "color",
      "value": "#000000",
    },
    "black": {
      "rawValue": "#000000",
      "type": "color",
      "value": "#000000",
    },
    "white": {
      "rawValue": "#ffffff",
      "type": "color",
      "value": "#ffffff",
    },
  },
}
`;

exports[`convertTokensObjectToResolved resolves all references when requested 1`] = `
{
  "colors": {
    "blue": {
      "type": "color",
      "value": "#0000ff",
    },
    "opaqueRed": {
      "description": "Should be resolved",
      "type": "color",
      "value": "#ff000080",
    },
    "primary": {
      "description": "Should be resolved",
      "type": "color",
      "value": "#ff0000",
    },
    "red": {
      "type": "color",
      "value": "#ff0000",
    },
  },
  "opacity": {
    "medium": {
      "type": "opacity",
      "value": 0.5,
    },
  },
  "radii": {
    "full": {
      "type": "borderRadius",
      "value": "100%",
    },
    "leaf": {
      "description": "Should be resolved",
      "type": "borderRadius",
      "value": "100% 0%",
    },
  },
  "sizing": {
    "base": {
      "type": "sizing",
      "value": 2,
    },
    "large": {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 4.5,
    },
    "medium": {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 3,
    },
    "responsive25": {
      "description": "Should be resolved",
      "type": "sizing",
      "value": "calc(25vw * 2)",
    },
    "responsive50": {
      "description": "Should be resolved",
      "type": "sizing",
      "value": "calc(50vw - 4.5px)",
    },
    "scale": {
      "type": "sizing",
      "value": 1.5,
    },
    "small": {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 2,
    },
    "xsmall": {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 2,
    },
  },
  "text": {
    "fontWeight": {
      "base": {
        "type": "fontWeight",
        "value": 100,
      },
      "light": {
        "type": "fontWeight",
        "value": "Light",
      },
    },
    "size": {
      "base": {
        "type": "fontSize",
        "value": 16,
      },
      "default": {
        "description": "Should be resolved",
        "type": "fontSize",
        "value": "16px",
      },
      "h1": {
        "type": "fontSize",
        "value": 96,
      },
      "unit": {
        "type": "fontSize",
        "value": "px",
      },
    },
  },
  "typography": {
    "h1": {
      "description": "Should be resolved",
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": 96,
        "fontWeight": "Light",
      },
    },
    "h2": {
      "description": "Should be resolved",
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": 60,
        "fontWeight": 700,
      },
    },
    "h3": {
      "description": "Should be resolved",
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": 48,
        "fontWeight": 500,
      },
    },
  },
}
`;

exports[`convertTokensObjectToResolved resolves only math expressions when requested 1`] = `
{
  "colors": {
    "blue": {
      "type": "color",
      "value": "#0000ff",
    },
    "opaqueRed": {
      "description": "Should NOT be resolved",
      "type": "color",
      "value": "rgba(255, 0, 0, {opacity.medium})",
    },
    "primary": {
      "description": "Should NOT be resolved",
      "type": "color",
      "value": "$colors.red",
    },
    "red": {
      "type": "color",
      "value": "#ff0000",
    },
  },
  "opacity": {
    "medium": {
      "type": "opacity",
      "value": 0.5,
    },
  },
  "radii": {
    "full": {
      "type": "borderRadius",
      "value": "100%",
    },
    "leaf": {
      "description": "Should NOT be resolved",
      "type": "borderRadius",
      "value": "{radii.full} 0%",
    },
  },
  "sizing": {
    "base": {
      "type": "sizing",
      "value": 2,
    },
    "large": {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 4.5,
    },
    "medium": {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 3,
    },
    "responsive25": {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "calc(25vw * $sizing.small)",
    },
    "responsive50": {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "calc(50vw - {sizing.large}px)",
    },
    "scale": {
      "type": "sizing",
      "value": 1.5,
    },
    "small": {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "{sizing.base}",
    },
    "xsmall": {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 2,
    },
  },
  "text": {
    "fontWeight": {
      "base": {
        "type": "fontWeight",
        "value": 100,
      },
      "light": {
        "type": "fontWeight",
        "value": "Light",
      },
    },
    "size": {
      "base": {
        "type": "fontSize",
        "value": 16,
      },
      "default": {
        "description": "Should NOT be resolved",
        "type": "fontSize",
        "value": "{text.size.base}{text.size.unit}",
      },
      "h1": {
        "type": "fontSize",
        "value": 96,
      },
      "unit": {
        "type": "fontSize",
        "value": "px",
      },
    },
  },
  "typography": {
    "h1": {
      "description": "Should NOT be resolved",
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": "{text.size.base}",
        "fontWeight": "{text.fontWeight.light}",
      },
    },
    "h2": {
      "description": "Should be resolved",
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": 60,
        "fontWeight": 700,
      },
    },
    "h3": {
      "description": "Should be resolved",
      "type": "typography",
      "value": {
        "fontFamily": "Roboto",
        "fontSize": 48,
        "fontWeight": 500,
      },
    },
  },
}
`;

exports[`convertTokensObjectToResolved respects used sets 1`] = `
{
  "colors": {
    "background": {
      "type": "color",
      "value": "#ffffff",
    },
    "black": {
      "type": "color",
      "value": "#000000",
    },
    "white": {
      "type": "color",
      "value": "#ffffff",
    },
  },
}
`;

exports[`convertTokensObjectToResolved should expand composition when needed 1`] = `
{
  "composition": {
    "body": {
      "sizing": {
        "type": "dimension",
        "value": 12,
      },
      "spacing": {
        "type": "spacing",
        "value": 24,
      },
    },
    "heading": {
      "opacity": {
        "type": "opacity",
        "value": "50%",
      },
    },
  },
  "opacity": {
    "50": {
      "rawValue": "50%",
      "type": "opacity",
      "value": "50%",
    },
  },
  "size": {
    "12": {
      "rawValue": "12",
      "type": "sizing",
      "value": 12,
    },
  },
  "space": {
    "24": {
      "rawValue": "24",
      "type": "spacing",
      "value": 24,
    },
  },
}
`;
